@@ -1,0 +1,36 @@
+#
+# Copyright 2013-2018 Guardtime, Inc.
+#
+# This file is part of the Guardtime client SDK.
+#
+# Licensed under the Apache License, Version 2.0 (the "License").
+# You may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#     http://www.apache.org/licenses/LICENSE-2.0
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES, CONDITIONS, OR OTHER LICENSES OF ANY KIND, either
+# express or implied. See the License for the specific language governing
+# permissions and limitations under the License.
+# "Guardtime" and "KSI" are trademarks or registered trademarks of
+# Guardtime, Inc., and no license to trademarks is granted; Guardtime
+# reserves and retains all trademark rights.
+# # Depends: libc libssl1.0.2 | libssl1.0.0 | libssl0.9.8
+
+Source: @PACKAGE@
+Section: utils
+Priority: optional
+Maintainer: Guardtime <support@guardtime.com>
+Standards-Version: 3.9.8
+Build-Depends: libssl1.0-dev | libssl-dev
+
+Package: @PACKAGE@
+Architecture: any
+Section: utils
+Priority: optional
+Depends: ${shlibs:Depends}
+Description: type-length-value (TLV) encoded data utility
+ The gttlvutil is a collection of utils for working with the KSI
+ type-length-value (TLV) encoded binary data. This encoding is used throughout
+ the KSI infrastructure: for KSI signature, publications file and network
+ communication.
